--- a/packages/client/src/components/table/coomon-style.module.scss
+++ b/packages/client/src/components/table/coomon-style.module.scss
@@ -2,13 +2,13 @@
   &.table {
     display: grid;
     justify-content: space-between;
-    max-width: 1000px;
+    //max-width: 1000px;
   }
 
   .tableCell {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     min-height: 3pc;
   }
 }
@@ -32,7 +32,7 @@
 }
 
 .tableHeader {
-  //margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .tableRow {
