--- a/packages/client/src/app/styles/index.css
+++ b/packages/client/src/app/styles/index.css
@@ -1,11 +1,12 @@
 :root {
     --color-text: #0f0f0f;
+    --color-gray-text: #383838;
     --color-hover: #f6f6f6;
     --color-hover-dark: #eaeaea;
     --color-accent: #683be4;
     --color-bg: #f5f5f5;
 
-    --table-main: #d5d5d5;
+    --table-main: rgba(9, 30, 66, 0.08);
 }
 
 body {
