--- a/packages/client/src/components/task-table/components/task-table-header/task-table-header.module.scss
+++ b/packages/client/src/components/task-table/components/task-table-header/task-table-header.module.scss
@@ -1,7 +1,14 @@
 .taskTableCellHeader {
   width: 320px;
-  padding: 4px;
+  height: 56px;
+  padding: 4px 4px 8px 4px ;
   margin-left: 8px;
   margin-right: 8px;
+  display: flex;
   background: var(--table-main);
+
+  & p {
+    color: var(--color-gray-text);
+    padding-left: 8px;
+  }
 }
