--- a/packages/client/src/pages/company-page/components/projects-table/components/project-table-body/project-table-body.module.scss
+++ b/packages/client/src/pages/company-page/components/projects-table/components/project-table-body/project-table-body.module.scss
@@ -1,8 +1,13 @@
 .tableRow {
   cursor: pointer;
 
+  .tableCell {
+    padding:  8px 4px 4px 4px;
+  }
 
-  & .tableCeil {
-
+  &:hover .tableCell {
+    background: var(--color-hover);
   }
 }
+
+
