--- a/packages/client/src/components/task-card/ui/task-card.module.scss
+++ b/packages/client/src/components/task-card/ui/task-card.module.scss
@@ -15,8 +15,6 @@
     height: 160px;
     cursor: pointer;
     padding: 8px;
-
-
   }
 
   .name {
@@ -27,7 +25,7 @@
   .description {
     max-width: 240px;
     max-height: 64px;
-    overflow: hidden;
+    overflow: scroll;
     text-overflow: ellipsis
   }
 }
